Add Cxx notebooks and Update intro_content

--- a/intro_content.ipynb
+++ b/intro_content.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "[Single-Qubit Topological Quantum Gates](C_Topological_Quantum_Gates/C00_Single_Qubit_Topological_Gates.ipynb)<br>\n",
     "[Two-Qubits Topological Quantum Gates](C_Topological_Quantum_Gates/C01_Two_Qubit_Topological_Gates.ipynb)<br>\n",
-    "[Anyons Simulator](C_Topological_Quantum_Gates/CX_Simulator.ipynb) (Optional)<br>\n",
+    "[Topological Braiding Circuit Simulator](C_Topological_Quantum_Gates/C02_Topological_Braiding_Circuit_Simulator.ipynb) (Optional)<br>\n",
     "\n",
     "#### Implementing Anyons\n",
     "\n",
